WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
230075
generated MessageArgumentDescriptions.cpp can't compile for non-Cocoa ports due to missing headers
https://bugs.webkit.org/show_bug.cgi?id=230075
Summary
generated MessageArgumentDescriptions.cpp can't compile for non-Cocoa ports d...
Fujii Hironori
Reported
2021-09-08 18:06:29 PDT
generated MessageArgumentDescriptions.cpp can't compile for non-Cocoa ports due to missing headers It includes platform specific headers unconditionally.
> WebKit\DerivedSources\MessageArgumentDescriptions.cpp(366): fatal error C1083: Cannot open include file: 'WebCore/CAAudioStreamDescription.h': No such file or directory
generate_message_argument_description_implementation generates the #includes, it should take receiver.condition into account.
Attachments
Patch
(9.32 KB, patch)
2021-09-08 18:25 PDT
,
Fujii Hironori
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2021-09-08 18:25:26 PDT
Created
attachment 437693
[details]
Patch
Fujii Hironori
Comment 2
2021-09-08 20:31:18 PDT
Comment on
attachment 437693
[details]
Patch Clearing flags on attachment: 437693 Committed
r282190
(
241477@main
): <
https://commits.webkit.org/241477@main
>
Fujii Hironori
Comment 3
2021-09-08 20:31:22 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2021-09-08 20:32:18 PDT
<
rdar://problem/82906144
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug