generated MessageArgumentDescriptions.cpp can't compile for non-Cocoa ports due to missing headers https://bugs.webkit.org/show_bug.cgi?id=230075

Reviewed by Ryosuke Niwa.

Source/WebCore:

* workers/service/ServiceWorkerFetchResult.h: Added a missing
header inclusion for MessageArgumentDescriptions.cpp.

Source/WebKit:

The generated MessageArgumentDescriptions.cpp unconditionally
included platform specific headers, for example
<WebCore/CAAudioStreamDescription.h>.

generate_message_argument_description_implementation generates the
#includes, it should take receiver.condition into account.

* CMakeLists.txt:
(GENERATE_MESSAGE_SOURCES): Added MessageArgumentDescriptions.cpp to compile.
* Scripts/webkit/messages.py:
(generate_message_argument_description_implementation):
* Scripts/webkit/tests/MessageArgumentDescriptions.cpp:

Canonical link: https://commits.webkit.org/241477@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@282190 268f45cc-cd09-0410-ab3c-d52691b4dbfc